--- a/Taste/Pages/Customer/Cart/Summary.cshtml
+++ b/Taste/Pages/Customer/Cart/Summary.cshtml
@@ -1,5 +1,8 @@
 ﻿@page
+@using Microsoft.Extensions.Options
 @model Taste.Pages.Customer.Cart.SummaryModel
+@inject IOptions<Taste.Utility.StripeSettings> Stripe
+@using Microsoft.Extensions.Options
 @{
 }
 
@@ -7,7 +10,7 @@
     <br />
     @if (Model.detailCart.listCart.Count > 0)
     {
-        <input asp-for="@Model.detailCart.listCart[0].ApplicationUserId" hidden/>
+        <input asp-for="@Model.detailCart.listCart[0].ApplicationUserId" hidden />
         <div class="backgroundWhiteBorder">
             <div class="container">
                 <div class="card">
@@ -34,37 +37,37 @@
                                             <label>Name</label>
                                         </div>
                                         <div class="col-9">
-                                            <input id="txtName" asp-for="@Model.detailCart.OrderHeader.PickupName" type="text" class="form-control"/>
+                                            <input id="txtName" asp-for="@Model.detailCart.OrderHeader.PickupName" type="text" class="form-control" />
                                         </div>
                                     </div>
-                                    
+
                                     <div class="row my-1">
                                         <div class="col-3">
                                             <label>Phone Number</label>
                                         </div>
                                         <div class="col-9">
-                                            <input id="txtPhone" asp-for="@Model.detailCart.OrderHeader.PhoneNumber" type="text" class="form-control"/>
+                                            <input id="txtPhone" asp-for="@Model.detailCart.OrderHeader.PhoneNumber" type="text" class="form-control" />
                                         </div>
                                     </div>
-                                    
+
                                     <div class="row my-1">
                                         <div class="col-3">
                                             <label>Pickup Date</label>
                                         </div>
                                         <div class="col-9">
-                                            <input id="datepicker" value="" asp-for="@Model.detailCart.OrderHeader.PickUpDate" type="text" class="form-control"/>
+                                            <input id="datepicker" value="" asp-for="@Model.detailCart.OrderHeader.PickUpDate" type="text" class="form-control" />
                                         </div>
                                     </div>
-                                    
+
                                     <div class="row my-1">
                                         <div class="col-3">
                                             <label>Pickup time</label>
                                         </div>
                                         <div class="col-9">
-                                            <input id="timepicker" value="" asp-for="@Model.detailCart.OrderHeader.PickUpTime" type="text" class="form-control"/>
+                                            <input id="timepicker" value="" asp-for="@Model.detailCart.OrderHeader.PickUpTime" type="text" class="form-control" />
                                         </div>
                                     </div>
-                                    
+
                                     <div class="row my-1">
                                         <div class="col-3">
                                             <label>Notes</label>
@@ -105,22 +108,38 @@
                     <div class="card-footer">
                         <div class="row">
                             <div class="col-12 col-md-4 offset-md-8">
-                                <button type="submit" id="btnPlaceOrder" onclick="return validateInput()" value="Place Order" class="btn btn-success form-control">Place Order</button>
-                            </div>
+                                @{
+                                    //convert amount to cents
+                                    var OrderTotalForStrip = Model.detailCart.OrderHeader.OrderTotal * 100;
+                                }
+                                <script src="https://checkout.stripe.com/checkout.js"
+                                        class="stripe-button"
+                                        data-keyboard="@Stripe.Value.PublishableKey"
+                                        data-amount="@OrderTotalForStrip"
+                                        data-name="Taste Restaurant"
+                                        data-label =" Place Order"
+                                        data-description ="Defend Your Nation! Buy now pay later"
+                                        data-locale="auto"
+                                        data-allow-remeber-me="false"
+                                       
+                                ></script>
+                              <script>document.getElementsByClassName("stripe-button-el")[0].style.display='none'</script>
+                            <button type="submit" id="btnPlaceOrder" onclick="return validateInput()" value="Place Order" class="btn btn-success form-control">Place Order</button>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-    }
+    </div>
+}
 </form>
 
 @section Scripts{
     <script>
-        $(function() {
-                $("#datepicker").datepicker({ minDate: 3, maxDate: "+1W" });
-                $("#timepicker").timepicker({ "minTime": "11:00 AM", "maxTime": "07:00 PM", step: "30" });
-            }
+        $(function () {
+            $("#datepicker").datepicker({ minDate: 3, maxDate: "+1W" });
+            $("#timepicker").timepicker({ "minTime": "11:00 AM", "maxTime": "07:00 PM", step: "30" });
+        }
         );
 
         function validateInput() {
