--- a/Taste/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Taste/Areas/Identity/Pages/Account/Register.cshtml
@@ -3,13 +3,14 @@
 @model RegisterModel
 @*This is the new design of register form*@
 
-<form method="post" autocomplete="off" asp-route-returnUrl="@Model.ReturnUrl">
-    <div class="py-4 my-4">
-        <div class="text-danger" asp-validation-summary="ModelOnly"></div>
-        <div class="row form-group">
-            <div class="col-8 offset-2">
-                <div class="card">
-                    <div class="card-body px-lg-5 pt-4">
+
+<div class="py-4 my-4">
+    <div class="text-danger" asp-validation-summary="ModelOnly"></div>
+    <div class="row form-group">
+        <div class="col-8 offset-2">
+            <div class="card">
+                <div class="card-body px-lg-5 pt-4">
+                    <form method="post" autocomplete="off" asp-route-returnUrl="@Model.ReturnUrl">
                         <h3 class="col-12 text-success text-center py-4">
                             <strong>Sign Up</strong>
                         </h3>
@@ -57,62 +58,56 @@
                         <div class="py-2">
                             <button type="submit" class="btn btn-success form-control">Register</button>
                         </div>
-                        <hr>
-                        <p>
-                            By clicking <em>Register</em> you agree to our <a href="" target="_blank"> terms and conditions  </a>
+                    </form>
+
+                    <form id="external-account" asp-page="./ExternalLogin" asp-route-returnUrl="@Model.ReturnUrl" method="post" class="form-horizontal">
+                        <p class="text-center">
+                            By clicking <em>Register</em> you agree to our <a href="" target="_blank"> terms and conditions </a>
                         </p>
+                        <hr /> 
+                        <div class="row">
+
+                            @foreach (var provider in Model.ExternalLogins)
+                            {
+                                //if provider is meet, provide the icon
+
+                                <div class="col-6">
+                                    @if (provider.Name.ToLower().Contains("facebook"))
+                                    {
+
+                                        <button type="submit" class="btn btn-block facebook-btn form-control" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account"><i class="fab fa-facebook-square"></i> Sign up with @provider.DisplayName</button>
+                                    }
+                                    else
+                                    {
+                                        @if (provider.Name.ToLower().Contains("micro"))
+                                        {
+                                            <button type="submit" class="btn btn-block microsoft-btn form-control" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account"><i class="fab fa-windows"></i> Sign up with @provider.DisplayName</button>
+                                        }
+
+                                        else
+                                        {
+                                            <button type="submit" class="btn btn-primary" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">@provider.DisplayName</button>
+
+                                        }
+                                    }
 
 
-                    </div>
+                                </div>
+                            }
+
+                        </div>
+                    </form>
+
+
+
+                    <hr>
+
                 </div>
             </div>
         </div>
     </div>
-</form>
-
-
-@{
-    ViewData["Title"] = "Register";
-}
-
-<h1>@ViewData["Title"]</h1>
-
-
-<div class="row">
-    <div class="col-md-4">
-
-    </div>
-    <div class="col-md-6 col-md-offset-2">
-        <section>
-            <h4>Use another service to register.</h4>
-            <hr />
-            @{
-                if ((Model.ExternalLogins?.Count ?? 0) == 0)
-                {
-                    <div>
-                        <p>
-                            There are no external authentication services configured. See <a href="https://go.microsoft.com/fwlink/?LinkID=532715">this article</a>
-                            for details on setting up this ASP.NET application to support logging in via external services.
-                        </p>
-                    </div>
-                }
-                else
-                {
-                    <form id="external-account" asp-page="./ExternalLogin" asp-route-returnUrl="@Model.ReturnUrl" method="post" class="form-horizontal">
-                        <div>
-                            <p>
-                                @foreach (var provider in Model.ExternalLogins)
-                                {
-                                    <button type="submit" class="btn btn-primary" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">@provider.DisplayName</button>
-                                }
-                            </p>
-                        </div>
-                    </form>
-                }
-            }
-        </section>
-    </div>
 </div>
+
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
