--- a/Taste/Pages/Admin/Order/OrderDetails.cshtml
+++ b/Taste/Pages/Admin/Order/OrderDetails.cshtml
@@ -11,22 +11,70 @@
                 <p class="h2  text-primary">Order Details</p>
             </div>
             <div class="col-12 col-md-4 offset-md-2">
-                <a class="btn btn-success form-control">Back to Orders </a>
+                <a asp-page="/Admim/Order/OrderList" class="btn btn-success form-control">Back to Orders </a>
             </div>
         </div>
         <hr />
 
         <div class="row pt-2">
 
-            <div class="col-lg-8 col-12" style="border-right:1px solid #bbb9b9">
+            <div class="col-lg-8 col-12" style="border-right: 1px solid #bbb9b9">
+                <input type="hidden" asp-for="OrderDetailsVM.OrderHeader.Id"/>
                 <div class="form-group row">
                     <div class="col-md-3 col-12 text-primary">
                         <label>Name</label>
                     </div>
                     <div class="col-md-9 col-12">
-                        <input disabled class="form-control" />
+                        <input asp-for="OrderDetailsVM.OrderHeader.PickupName" disabled class="form-control"/>
                     </div>
                 </div>
+                
+                <div class="form-group row">
+                    <div class="col-md-3 col-12 text-primary">
+                        <label asp-for="OrderDetailsVM.OrderHeader.ApplicationUser.Email"></label>
+                    </div>
+                    <div class="col-md-9 col-12">
+                        <input asp-for="OrderDetailsVM.OrderHeader.ApplicationUser.Email" disabled class="form-control"/>
+                    </div>
+                </div>
+                
+                <div class="form-group row">
+                    <div class="col-md-3 col-12 text-primary">
+                        <label asp-for="OrderDetailsVM.OrderHeader.ApplicationUser.PhoneNumber"></label>
+                    </div>
+                    <div class="col-md-9 col-12">
+                        <input asp-for="OrderDetailsVM.OrderHeader.ApplicationUser.PhoneNumber" disabled class="form-control"/>
+                    </div>
+                </div>
+                
+                <div class="form-group row">
+                    <div class="col-md-3 col-12 text-primary">
+                        <label asp-for="OrderDetailsVM.OrderHeader.OrderTotal"></label>
+                    </div>
+                    <div class="col-md-9 col-12">
+                        <input asp-for="OrderDetailsVM.OrderHeader.OrderTotal" disabled class="form-control"/>
+                    </div>
+                </div>
+                
+                <div class="form-group row">
+                    <div class="col-md-3 col-12 text-primary">
+                        <label asp-for="OrderDetailsVM.OrderHeader.OrderDate"></label>
+                    </div>
+                    <div class="col-md-9 col-12">
+                        <input value="@Model.OrderDetailsVM.OrderHeader.PickUpTime.ToShortDateString () @Model.OrderDetailsVM.OrderHeader.PickUpTime.ToShortTimeString()" disabled class="form-control"/>
+                    </div>
+                </div>
+                
+                <div class="form-group row">
+                    <div class="col-md-3 col-12 text-primary">
+                        <label asp-for="OrderDetailsVM.OrderHeader.Comments"></label>
+                    </div>
+                    <div class="col-md-9 col-12">
+                        <input asp-for="OrderDetailsVM.OrderHeader.Comments" disabled class="form-control"/>
+                    </div>
+                </div>
+                
+
 
             </div>
 
