--- a/Taste/Pages/Admin/Order/OrderDetails.cshtml
+++ b/Taste/Pages/Admin/Order/OrderDetails.cshtml
@@ -1,4 +1,5 @@
 ﻿@page
+@using Taste.Utility
 @model Taste.Pages.Admin.Order.OrderDetailsModel
 @{
 }
@@ -61,7 +62,7 @@
                         <label asp-for="OrderDetailsVM.OrderHeader.OrderDate"></label>
                     </div>
                     <div class="col-md-9 col-12">
-                        <input value="@Model.OrderDetailsVM.OrderHeader.PickUpTime.ToShortDateString () @Model.OrderDetailsVM.OrderHeader.PickUpTime.ToShortTimeString()" disabled class="form-control"/>
+                        <input value="@Model.OrderDetailsVM.OrderHeader.PickUpTime.ToShortDateString() @Model.OrderDetailsVM.OrderHeader.PickUpTime.ToShortTimeString()" disabled class="form-control"/>
                     </div>
                 </div>
                 
@@ -73,42 +74,45 @@
                         <input asp-for="OrderDetailsVM.OrderHeader.Comments" disabled class="form-control"/>
                     </div>
                 </div>
-                
-
 
             </div>
 
+            @*this is the amount section*@
 
-
-            <div class="col-lg-4 col-12">
-                <h4 class="d-flex justify-content-between align-content-center mb-3">
-                    <span class="text-muted">Order ID: </span>
-                    <span class="badge badge-secondary badge-pill">$$ORDER ID$$</span>
-                </h4>
-                <ul class="list-group mb-3">
+        <div class="col-lg-4 col-12">
+            <h4 class="d-flex justify-content-between align-content-center mb-3">
+                <span class="text-muted">Order ID: </span>
+                <span class="badge badge-secondary badge-pill">@Model.OrderDetailsVM.OrderHeader.Id</span>
+            </h4>
+            <ul class="list-group mb-3">
+                @foreach (var details in Model.OrderDetailsVM.OrderDetails)
+                {
 
                     <li class="list-group-item d-flex justify-content-between">
                         <div>
-                            <h6 class="my-0">$$NAME$$</h6>
-                            <small class="text-muted">Quantity : $$Count$$</small>
+                            <h6 class="my-0">@details.Name</h6>
+                            <small class="text-muted">Quantity : @details.Count</small>
                         </div>
-                        <span class="text-muted">$$TOTAL PRICE$$</span>
+                        <span class="text-muted">$@(details.Price * details.Count)</span>
                     </li>
 
 
                     <li class="list-group-item d-flex justify-content-between bg-light">
                         <span class="text-info"> Total (USD)</span>
-                        <strong class="text-info">$$ORDER TOTAL$$</strong>
+                        <strong class="text-info">$@Model.OrderDetailsVM.OrderHeader.OrderTotal</strong>
                     </li>
-
-                </ul>
-
+                }
+            </ul>
+            @if (Model.OrderDetailsVM.OrderHeader.Status.Equals(SD.StatusReady) && (User.IsInRole(SD.ManagerRole)) || User.IsInRole(SD.FrontDeskRole))
+            {
                 <button type="submit" class="btn btn-success form-control"><i class="far fa-thumbs-up"></i> Confirm Pickup</button>
 
-                <button type="submit" disabled class="btn btn-info form-control">$$ ORDER STATUS $$ </button>
+            }
+
+            <button type="submit" disabled class="btn btn-info form-control">@Model.OrderDetailsVM.OrderHeader.Status  </button>
 
 
-            </div>
+        </div>
 
         </div>
     </div>
