--- a/Taste/Pages/Admin/Order/ManageOrder.cshtml
+++ b/Taste/Pages/Admin/Order/ManageOrder.cshtml
@@ -53,7 +53,8 @@
 
                                     @if (item.OrderHeader.Status.Equals(SD.StatusSubmitted))
                                     {
-                                        <button type="submit" class="btn btn-primary form-control mb-3">
+                                        <button type="submit" class="btn btn-primary form-control mb-3" 
+                                                asp-page-handler="OrdePrepare" asp-route-orderId="@item.OrderHeader.Id">
                                             <i class="fas fa-check"></i> &nbsp; Start Cooking
                                         </button>
                                     }
@@ -62,17 +63,20 @@
                                     {
                                         if (item.OrderHeader.Status.Equals(SD.StatusInProcess))
                                         {
-                                            <button type="submit" class="btn btn-success form-control mb-3">
+                                            <button type="submit" class="btn btn-success form-control mb-3" 
+                                                    asp-page-handler="OrderReady" asp-route-orderId="@item.OrderHeader.Id">
                                                 <i class="fas fa-flag-checkered"></i> &nbsp; Order Ready
                                             </button>
                                         }
                                         
                                     }
-                                    <button type="submit" class="btn btn-warning form-control mb-3">
+                                    <button type="submit" class="btn btn-warning form-control mb-3"
+                                            asp-page-handler="OrderCancel" asp-route-orderId="@item.OrderHeader.Id">
                                         <i class="fas fa-times"></i> &nbsp; Cancel Order
                                     </button>
                                         
-                                    <button type="submit" class="btn btn-danger form-control mb-3">
+                                    <button type="submit" class="btn btn-danger form-control mb-3"
+                                            asp-page-handler="OrderRefund" asp-route-orderId="@item.OrderHeader.Id">
                                         <i class="fas fa-times"></i> &nbsp; Refund Order
                                     </button>
 
