--- a/Taste/Pages/Admin/Order/OrderDetails.cshtml
+++ b/Taste/Pages/Admin/Order/OrderDetails.cshtml
@@ -20,58 +20,58 @@
         <div class="row pt-2">
 
             <div class="col-lg-8 col-12" style="border-right: 1px solid #bbb9b9">
-                <input type="hidden" asp-for="OrderDetailsVM.OrderHeader.Id"/>
+                <input type="hidden" asp-for="OrderDetailsVM.OrderHeader.Id" />
                 <div class="form-group row">
                     <div class="col-md-3 col-12 text-primary">
                         <label>Name</label>
                     </div>
                     <div class="col-md-9 col-12">
-                        <input asp-for="OrderDetailsVM.OrderHeader.PickupName" disabled class="form-control"/>
+                        <input asp-for="OrderDetailsVM.OrderHeader.PickupName" disabled class="form-control" />
                     </div>
                 </div>
-                
+
                 <div class="form-group row">
                     <div class="col-md-3 col-12 text-primary">
                         <label asp-for="OrderDetailsVM.OrderHeader.ApplicationUser.Email"></label>
                     </div>
                     <div class="col-md-9 col-12">
-                        <input asp-for="OrderDetailsVM.OrderHeader.ApplicationUser.Email" disabled class="form-control"/>
+                        <input asp-for="OrderDetailsVM.OrderHeader.ApplicationUser.Email" disabled class="form-control" />
                     </div>
                 </div>
-                
+
                 <div class="form-group row">
                     <div class="col-md-3 col-12 text-primary">
                         <label asp-for="OrderDetailsVM.OrderHeader.ApplicationUser.PhoneNumber"></label>
                     </div>
                     <div class="col-md-9 col-12">
-                        <input asp-for="OrderDetailsVM.OrderHeader.ApplicationUser.PhoneNumber" disabled class="form-control"/>
+                        <input asp-for="OrderDetailsVM.OrderHeader.ApplicationUser.PhoneNumber" disabled class="form-control" />
                     </div>
                 </div>
-                
+
                 <div class="form-group row">
                     <div class="col-md-3 col-12 text-primary">
                         <label asp-for="OrderDetailsVM.OrderHeader.OrderTotal"></label>
                     </div>
                     <div class="col-md-9 col-12">
-                        <input asp-for="OrderDetailsVM.OrderHeader.OrderTotal" disabled class="form-control"/>
+                        <input asp-for="OrderDetailsVM.OrderHeader.OrderTotal" disabled class="form-control" />
                     </div>
                 </div>
-                
+
                 <div class="form-group row">
                     <div class="col-md-3 col-12 text-primary">
                         <label asp-for="OrderDetailsVM.OrderHeader.OrderDate"></label>
                     </div>
                     <div class="col-md-9 col-12">
-                        <input value="@Model.OrderDetailsVM.OrderHeader.PickUpTime.ToShortDateString() @Model.OrderDetailsVM.OrderHeader.PickUpTime.ToShortTimeString()" disabled class="form-control"/>
+                        <input value="@Model.OrderDetailsVM.OrderHeader.PickUpTime.ToShortDateString() @Model.OrderDetailsVM.OrderHeader.PickUpTime.ToShortTimeString()" disabled class="form-control" />
                     </div>
                 </div>
-                
+
                 <div class="form-group row">
                     <div class="col-md-3 col-12 text-primary">
                         <label asp-for="OrderDetailsVM.OrderHeader.Comments"></label>
                     </div>
                     <div class="col-md-9 col-12">
-                        <input asp-for="OrderDetailsVM.OrderHeader.Comments" disabled class="form-control"/>
+                        <input asp-for="OrderDetailsVM.OrderHeader.Comments" disabled class="form-control" />
                     </div>
                 </div>
 
@@ -79,40 +79,56 @@
 
             @*this is the amount section*@
 
-        <div class="col-lg-4 col-12">
-            <h4 class="d-flex justify-content-between align-content-center mb-3">
-                <span class="text-muted">Order ID: </span>
-                <span class="badge badge-secondary badge-pill">@Model.OrderDetailsVM.OrderHeader.Id</span>
-            </h4>
-            <ul class="list-group mb-3">
-                @foreach (var details in Model.OrderDetailsVM.OrderDetails)
+            <div class="col-lg-4 col-12">
+                <h4 class="d-flex justify-content-between align-content-center mb-3">
+                    <span class="text-muted">Order ID: </span>
+                    <span class="badge badge-secondary badge-pill">@Model.OrderDetailsVM.OrderHeader.Id</span>
+                </h4>
+                <ul class="list-group mb-3">
+                    @foreach (var details in Model.OrderDetailsVM.OrderDetails)
+                    {
+
+                        <li class="list-group-item d-flex justify-content-between">
+                            <div>
+                                <h6 class="my-0">@details.Name</h6>
+                                <small class="text-muted">Quantity : @details.Count</small>
+                            </div>
+                            <span class="text-muted">$@(details.Price * details.Count)</span>
+                        </li>
+
+
+                        <li class="list-group-item d-flex justify-content-between bg-light">
+                            <span class="text-info"> Total (USD)</span>
+                            <strong class="text-info">$@Model.OrderDetailsVM.OrderHeader.OrderTotal</strong>
+                        </li>
+                    }
+                </ul>
+                @if (Model.OrderDetailsVM.OrderHeader.Status.Equals(SD.StatusReady) && (User.IsInRole(SD.ManagerRole)) || User.IsInRole(SD.FrontDeskRole))
+                {
+                    <button type="submit" class="btn btn-success form-control" asp-page-handler="OrderConfirm" asp-route-orderId="@Model.OrderDetailsVM.OrderHeader.Id"><i class="far fa-thumbs-up"></i> Confirm Pickup</button>
+
+                }
+                else
                 {
 
-                    <li class="list-group-item d-flex justify-content-between">
-                        <div>
-                            <h6 class="my-0">@details.Name</h6>
-                            <small class="text-muted">Quantity : @details.Count</small>
-                        </div>
-                        <span class="text-muted">$@(details.Price * details.Count)</span>
-                    </li>
-
-
-                    <li class="list-group-item d-flex justify-content-between bg-light">
-                        <span class="text-info"> Total (USD)</span>
-                        <strong class="text-info">$@Model.OrderDetailsVM.OrderHeader.OrderTotal</strong>
-                    </li>
                 }
-            </ul>
-            @if (Model.OrderDetailsVM.OrderHeader.Status.Equals(SD.StatusReady) && (User.IsInRole(SD.ManagerRole)) || User.IsInRole(SD.FrontDeskRole))
-            {
-                <button type="submit" class="btn btn-success form-control"><i class="far fa-thumbs-up"></i> Confirm Pickup</button>
+                <button type="submit" disabled class="btn btn-info form-control">@Model.OrderDetailsVM.OrderHeader.Status  </button>
 
-            }
+                @if (User.IsInRole(SD.ManagerRole) || User.IsInRole(SD.FrontDeskRole))
+                {
+                    <div class="row p-1">
+                        <div class="col-6">
+                            <button type="submit" class="btn btn-warning form-control" asp-page-handler="OrderCancel" asp-route-orderId="@Model.OrderDetailsVM.OrderHeader.Id"><i class="fas fa-times"></i> Cancel Order</button>
+                        </div>
 
-            <button type="submit" disabled class="btn btn-info form-control">@Model.OrderDetailsVM.OrderHeader.Status  </button>
+                        <div class="col-6">
+                            <button type="submit" class="btn btn-danger form-control" asp-page-handler="OrderRefunded" asp-route-orderId="@Model.OrderDetailsVM.OrderHeader.Id"><i class="fas fa-times"></i> Refund Order</button>
+                        </div>
+                    </div>
 
+                }
 
-        </div>
+            </div>
 
         </div>
     </div>
