--- a/Taste/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Taste/Areas/Identity/Pages/Account/Login.cshtml
@@ -8,56 +8,67 @@
         <h1 class="h3 mb-3 font-weight-normal text-primary" style="text-align:center">Sign In</h1>
         <div class="social-login pb-0 mb-0">
 
-            @foreach (var provider in Model.ExternalLogins)
+
+            @*check first if there are any external login to avoid error*@
+            @if (Model.ExternalLogins?.Count > 0)
             {
-                //if provider is meet, provide the icon
-
-
-                @if (provider.Name.ToLower().Contains("facebook"))
+                @foreach (var provider in Model.ExternalLogins)
                 {
+                    //if provider is meet, provide the icon
 
-                    <button type="submit" class="btn btn-block facebook-btn form-control" name="provider"
-                            value="@provider.Name" title="Log in using your @provider.DisplayName account">
-                        <i class="fab fa-facebook-square"></i> Sign up with @provider.DisplayName
-                    </button>
-                }
-                else
-                {
-                    @if (provider.Name.ToLower().Contains("micro"))
+
+                    @if (provider.Name.ToLower().Contains("facebook"))
                     {
-                        <button type="submit" class="btn btn-block microsoft-btn form-control" name="provider"
+
+                        <button type="submit" class="btn btn-block facebook-btn form-control" name="provider"
                                 value="@provider.Name" title="Log in using your @provider.DisplayName account">
-                            <i class="fab fa-windows"></i> Sign up with @provider.DisplayName
+                            <i class="fab fa-facebook-square"></i> Sign up with @provider.DisplayName
                         </button>
                     }
-
                     else
                     {
-                        <button type="submit" class="btn btn-primary" name="provider" value="@provider.Name"
-                                title="Log in using your @provider.DisplayName account">
-                            @provider.DisplayName
-                        </button>
+                        @if (provider.Name.ToLower().Contains("micro"))
+                        {
+                            <button type="submit" class="btn btn-block microsoft-btn form-control" name="provider"
+                                    value="@provider.Name" title="Log in using your @provider.DisplayName account">
+                                <i class="fab fa-windows"></i> Sign up with @provider.DisplayName
+                            </button>
+                        }
 
+                        else
+                        {
+                            <button type="submit" class="btn btn-primary" name="provider" value="@provider.Name"
+                                    title="Log in using your @provider.DisplayName account">
+                                @provider.DisplayName
+                            </button>
+
+                        }
                     }
-                }
 
+                }
             }
+
+
+
 
         </div>
     </form>
-    
-    <form id="account" method="post">
 
-        <p style="text-align:center">OR</p>
-        <input asp-for="Input.Email" placeholder="Email..." type="email" required="" autofocus="" class="mb-1 form-control"/>
-        <input asp-for="Input.Password" type="password" placeholder="Password..." required="" class="form-control"/>
+    <form id="account" method="post">
+        @if (Model.ExternalLogins?.Count > 0)
+        {
+            <p style="text-align: center">OR</p>
+        }
+        <input asp-for="Input.Email" placeholder="Email..." type="email" required="" autofocus="" class="mb-1 form-control" />
+        <input asp-for="Input.Password" type="password" placeholder="Password..." required="" class="form-control" />
         <button type="submit" class="btn btn-success btn-block"><i class="fas fa-sign-in-alt"></i>Sign in</button>
         <a id="forgot-password" asp-page="./ForgotPassword" class="pb-2">Forgot your password?</a>
+        <div asp-validation-summary="All" class="text-danger"> </div>
         <a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl" class="btn btn-primary text-white" id="btn-signup"><i class="fas fa-user-plus"></i> Register as a new user</a>
     </form>
-    
+
 </div>
-    
+
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
 }
